<resources>
    <string name="app_name">BN</string>
    <string name="app_name_full">BeaytyNote</string>
    <string name="skip">Skip</string>
    <string name="book">Book</string>
    <string name="any_service">Any Service</string>
    <string name="onboarding1_text">You can find any service here and make booking in a minute</string>
    <string name="visit">Visit</string>
    <string name="select_service">Selected Service</string>
    <string name="onboarding2_text">Get notifications about booked services and visit it</string>
    <string name="pay">Pay</string>
    <string name="inside_app">Inside app</string>
    <string name="onboarding3_text">Pay for visited service fast and easy inside BeautyNote</string>
    <string name="welcome_to_app">Welcome to BeautyNote</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget Password</string>
    <string name="signup">Sign Up</string>
    <string name="search_text">Search</string>
    <string name="master">Master</string>
    <string name="client">Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">798691565181740</string>
    <string name="fb_login_protocol_scheme">fb6798691565181740</string>
    <string name="facebook_client_token">56789</string>


</resources>